--- a/css/main/1024px.css
+++ b/css/main/1024px.css
@@ -204,7 +204,69 @@
     .section2_content {
         width: 320px;
         height: 215px;
-        background-color: royalblue;
+        position: relative;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* background-color: royalblue; */
+        z-index: 2;
+    }
+
+    .bg {
+        content: "";
+        opacity: 0.2;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: #000;
+        z-index: 0;
+    }
+
+    .section2_content .fa-times-circle {
+        display: none;
+        position: absolute;
+        top: 1%;
+        left: 96%;
+        justify-self: flex-end;
+        align-self: flex-end;
+    }
+
+    .section2_content i {
+        color: white;
+        position: relative;
+        font-size: 35px;
+        justify-self: center;
+        align-self: center;
+        
+    }
+
+    .section2_content p {
+        color: white;
+        position: relative;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        /* margin-top: 10px; */
+        justify-self: center;
+        align-self: center;
+    }
+
+    .section2_content .detail {
+        display: none;
+        font-size: 16px;
+        justify-self: center;
+        align-self: center;
+    }
+
+    .section2_content:hover{
+        cursor: pointer;
     }
 
     .wrap3 .section3_box {
@@ -255,17 +317,33 @@
         background-color: pink;
     }
 
-    /* .clip {
-        width: 100px;
-        height: 100px;
-    } */
+    .section3_content .section3_img image {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        object-fit: cover;
+    }
 
     .section3_menu {
         width: 3.2%;
         height: 100%;
         background-color: #161616;
-        border-left: 0.5px solid gray;
+        /* border-left: 0.5px solid gray; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
         z-index: 20;
+    }
+
+    .section3_menu_description {
+        width: 80%;
+        height: 70%;
+        color: gray;
+        border-left: solid gray 0.5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
     }
 
     #teaground {
