--- a/css/main/1024px.css
+++ b/css/main/1024px.css
@@ -314,14 +314,68 @@
         position: absolute;
         top: 12.5%;
         left: 32.5%;
-        background-color: pink;
+        /* background-image: url('../../image/main/section3/section3_1.png');
+        background-position: center;
+        background-size: 100% 100%; */
+        /* background-color: pink; */
     }
 
     .section3_content .section3_img image {
         width: 100%;
-        height: 100%;
-        position: relative;
-        object-fit: cover;
+        /* height: 100%; */
+        /* position: relative;
+        object-fit: cover; */
+    }
+
+    .section3_content .section3_img:hover {
+        cursor: pointer;
+    }
+
+    .gray {
+        filter: grayscale(100%);
+    }
+
+    .section3_description {
+        width: 35%;
+        height: 75%;
+        position: absolute;
+        top: 12.5%;
+        left: 32.5%;
+        /* background-color: rgba(0,0,0,0.5); */
+        z-index: -1;
+        color: white;
+        display: none;
+    }
+
+    .test1 {
+        width:20%;
+        height:80%;
+        x:0%;
+        y:5%;
+    }
+
+    .test2 {
+        width:20%;
+        height:80%;
+        x:25%;
+        y:0%;
+        y:15.5%;
+    }
+
+    .test3 {
+        width:20%;
+        height:80%;
+        x:55%;
+        y:0%;
+        y:15.5%;
+    }
+
+    .test4 {
+        width:20%;
+        height:80%;
+        x:80%;
+        y:0%;
+        y:26%;
     }
 
     .section3_menu {
@@ -338,8 +392,8 @@
     .section3_menu_description {
         width: 80%;
         height: 70%;
-        color: gray;
-        border-left: solid gray 0.5px;
+        color: #747474; 
+        border-left: solid #747474 0.5px;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -366,4 +420,19 @@
         background-color: #161616;
         z-index: 150;
     }
+
+    .circle {
+        position: absolute;
+        top: 0;
+        left: 0;
+        /* width: 200px;
+        height: 200px; */
+        /* border-radius: 50%; */
+        /* background-color: #ee6c4d; */
+        transform: translate(-50%, -50%);
+        z-index: 300;
+        display: none;
+    }
+
+    
 }
