--- a/css/main/1024px.css
+++ b/css/main/1024px.css
@@ -320,7 +320,7 @@
 
     .bg {
         content: "";
-        opacity: 0.1;
+        opacity: 0.3;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -407,6 +407,7 @@
         width: 96.8%;
         height: 100%;
         position: relative;
+        overflow: hidden;
         /* background-color: red; */
         /* background-color: #161616; */
     }
@@ -443,11 +444,14 @@
         height: 75%;
         position: absolute;
         top: 12.5%;
+        /* top: 50%; */
         left: 32.5%;
-        /* background-color: rgba(0,0,0,0.5); */
+        /* background-color: pink; */
         z-index: -1;
         color: white;
         display: none;
+        /* opacity: 0; */
+        overflow: hidden;
     }
 
     .test1 {
@@ -481,6 +485,38 @@
         y:26%;
     }
 
+    .section3_description div {
+        width: 100%;
+        height: 100%;
+        font-family: 'Arita-dotum-Medium';
+        position: relative;
+        left: 0;
+    }
+
+    .section3_description div h2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .section3_description div p {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .section3_description1 div {
+        top: 80%;
+    }
+
+    .section3_description2 div {
+        top: 80%;
+    }
+
+    .section3_description3 div {
+        top: 80%;
+    }
+
     .section3_menu {
         width: 3.2%;
         height: 100%;
@@ -490,6 +526,7 @@
         justify-content: center;
         align-items: center;
         z-index: 20;
+        font-family: 'Arita-dotum-Medium';
     }
 
     .section3_menu_description {
@@ -681,19 +718,6 @@
     }
 
     .circle {
-        position: absolute;
-        top: 0;
-        left: 0;
-        /* width: 200px;
-        height: 200px; */
-        /* border-radius: 50%; */
-        /* background-color: #ee6c4d; */
-        transform: translate(-50%, -50%);
-        z-index: 300;
-        display: none;
-    }
-
-    .circle2 {
         width: 200px;
         height: 200px;
         position: absolute;
@@ -702,18 +726,9 @@
         /* width: 200px;
         height: 200px; */
         /* border-radius: 50%; */
-        background-color: white;
+        /* background-color: pink; */
         transform: translate(-50%, -50%);
         z-index: 300;
-        /* display: none; */
+        display: none;
     }
-
-    .circle2 .fa-mouse {
-        color: black;
-        font-size: 50px;
-        width: 10%;
-        height: 10%;
-    }
-
-    
 }
