--- a/css/main/1024px.css
+++ b/css/main/1024px.css
@@ -8,7 +8,6 @@
         display: flex;
         flex-wrap: wrap;
         overflow: hidden;
-        /* background-color: pink; */
     }
 
     header {
@@ -16,8 +15,6 @@
         height: 20%;
         display: flex;
         flex-wrap: wrap;
-        /* position: fixed; */
-        /* background-color: red; */
     }
 
     header #menubtn {
@@ -205,7 +202,7 @@
     #section_container #section1 {
         width: 20.93%;
         left: 1.16%;
-        background-color: white;
+        background-color: black;
     }
 
     #section_container #section2 {
@@ -216,6 +213,7 @@
 
     #section_container #section3 {
         width: 23.3%;
+        height: 100%;
         left: 53.5%;
         background-color: rgba(22,22,22,0.7);
         /* background-color: red; */
@@ -223,22 +221,29 @@
 
     #section_container #section4 {
         width: 23.3%;
+        height: 100%;
         left: 76.7%;
         background-color: #161616;
+        /* background-color: pink; */
         z-index: 80;
     }
 
     .wrap {
-        width: 100%;
-        height: 80%;
+        /* width: 100%;
+        height: 100%;
         position: relative;
-        top: 20%;
-        left: 0;
+        top: 0;
+        left: 0; */
         /* background-color: pink; */
 
     }
 
     .wrap1 {
+        width: 100%;
+        height: 80%;
+        position: relative;
+        top: 20%;
+        left: 0;
         background-color: black;
     }
 
@@ -285,6 +290,11 @@
     }
 
     .wrap2 {
+        width: 100%;
+        height: 80%;
+        position: relative;
+        top: 20%;
+        left: 0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -372,6 +382,14 @@
         cursor: pointer;
     }
 
+    .wrap3 {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: 15%;
+        left: 0;
+    }
+
     .wrap3 .section3_box {
         width: 94%;
         height: 100%;
@@ -379,6 +397,7 @@
         display: flex;
         flex-wrap: wrap;
         overflow: hidden;
+        /* background-color: pink; */
         /* background-color: #161616; */
     }
 
@@ -405,9 +424,10 @@
 
     .section3_content {
         width: 96.8%;
-        height: 100%;
+        height: 80%;
         position: relative;
         overflow: hidden;
+        font-family: 'Arita-dotum-Medium';
         /* background-color: red; */
         /* background-color: #161616; */
     }
@@ -418,6 +438,11 @@
         position: absolute;
         top: 12.5%;
         left: 32.5%;
+        /* width: 80%;
+        height: 80%;
+        position: absolute;
+        top: 10%;
+        left: 0; */
         /* background-image: url('../../image/main/section3/section3_1.png');
         background-position: center;
         background-size: 100% 100%; */
@@ -426,7 +451,7 @@
 
     .section3_content .section3_img image {
         width: 100%;
-        /* height: 100%; */
+        height: 100%;
         /* position: relative;
         object-fit: cover; */
     }
@@ -454,6 +479,22 @@
         overflow: hidden;
     }
 
+    .content_title {
+        width: 20%;
+        height: 10%;
+        position: absolute;
+        top: 50%;
+        left: 23%;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Arita-dotum-Medium';
+        font-size: 80px;
+        letter-spacing: 30px;
+        /* background-color: pink; */
+    }
+
     .test1 {
         width:20%;
         height:80%;
@@ -465,7 +506,6 @@
         width:20%;
         height:80%;
         x:25%;
-        y:0%;
         y:15.5%;
     }
 
@@ -473,7 +513,6 @@
         width:20%;
         height:80%;
         x:55%;
-        y:0%;
         y:15.5%;
     }
 
@@ -481,7 +520,6 @@
         width:20%;
         height:80%;
         x:80%;
-        y:0%;
         y:26%;
     }
 
@@ -541,12 +579,13 @@
     }
 
     #teaground {
-        width: 70%;
-        height: 80%;
+        width: 100%;
+        height: 100%;
         position: absolute;
-        top: 20%;
-        left: 15%;
+        top: 0;
+        left: 0;
         z-index: 1;
+        background-color: #161616;
         /* display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -629,20 +668,56 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: pink;
+        background: url('../../image/main/bg_map.jpg');
+        background-position: center;
+        background-size: 100% 100%;
         opacity: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Arita-dotum-Medium';
+        font-size: 30px;
     }
 
+    /* #teaground_description div{
+        width: 60%;
+        height: 40%;
+        background-color: pink;
+    } */
+
+
+
     .wrap4 {
-        /* background-color: pink; */
+        width: 80%;
+        height: 80%;
+        /* position: relative;
+        top: 20%;
+        left: 10%; */
+        /* width: 100%;
+        height: 100%;
+        position: relative;
+        top: 0;
+        left: 0; */
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
+    .wrap4:hover {
+        cursor: pointer;
+    }
+
     .section4_video {
         width: 50%;
         height: 100%;
+        position: relative;
+        top: 25%;
+        left: 10%;
+        /* width: 100%;
+        height: 100%;
+        position: relative;
+        top: 0;
+        left: 0; */
         /* background-color: gray; */
     }
 
@@ -717,18 +792,118 @@
         cursor: pointer;
     }
 
-    .circle {
-        width: 200px;
-        height: 200px;
+    #titlebox {
+        width: 100%;
+        height: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row-reverse;
+        /* background-color: pink; */
+    }
+    
+    #titlebox #menubox {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        /* background-color: red; */
+    }
+
+    #titlebox #menubox div {
+        width: 20%;
+        height: 70%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        border-left: 0.5px solid #747474;
+        /* background-color: gray; */
+        font-family: 'Arita-dotum-Medium';
+    }
+
+    #titlebox #menubox div span {
+        width: 30%;
+        height: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 40px;
+        color: white;
+        /* background-color: pink; */
+    }
+
+    #titlebox #infobox {
+        width: 40%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-content: flex-start;
+        font-family: 'Arita-dotum-Medium';
+        /* background-color: blue; */
+    }
+
+    #titlebox #infobox div {
+        width: 50%;
+        height: 20%;
+        border-top: 0.5px solid #747474;
+        color: gray;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        /* background-color: gray; */
+    }
+
+    .circle1 {
+        width: 100px;
+        height: 100px;
         position: absolute;
         top: 0;
         left: 0;
-        /* width: 200px;
-        height: 200px; */
-        /* border-radius: 50%; */
-        /* background-color: pink; */
         transform: translate(-50%, -50%);
         z-index: 300;
+        border-radius: 50%;
+        /* background-color: pink; */
         display: none;
+        border: 0.5px solid #747474;
+    }
+
+    .circle1 div {
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Arita-dotum-Medium';
+        color: white;
+    }
+
+    .circle {
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(-50%, -50%);
+        z-index: 300;
+        border-radius: 50%;
+        /* background-color: pink; */
+        display: none;
+        border: 0.5px solid #747474;
+    }
+
+    .circle div {
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Arita-dotum-Medium';
+        color: white;
     }
 }
