--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -33,6 +33,7 @@
         position: fixed;
         top: 0;
         left: 0;
+        z-index: 2;
         font-family: 'Arita-dotum-Medium';
     }
 
@@ -71,6 +72,7 @@
         height: 400vh;
         position: relative;
         z-index: -1;
+        font-family: 'Arita-dotum-Medium';
         background-color: blue;
     }
 
@@ -89,7 +91,12 @@
         position: absolute;
         top: 40vh;
         left: 10vw;
-        background-color: cornflowerblue;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        color: white;
+        font-size: 70px;
+        /* background-color: cornflowerblue; */
     }
 
     #section1des1 {
@@ -98,6 +105,11 @@
         position: absolute;
         top: 100vh;
         left: 10vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: white;
+        font-size: 20px;
         background-color: crimson;
     }
 
@@ -107,7 +119,28 @@
         position: absolute;
         top: 120vh;
         left: 70vw;
-        background-color: crimson;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: space-between;
+        /* background-color: crimson; */
+    }
+
+    #des1menu1 {
+        width: 100%;
+        height: 25%;
+        font-size: 20px;
+        font-weight: 900;
+    }
+
+    .des1menu {
+        width: 100%;
+        height: 20%;
+        border-top: gray 0.5px solid;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        /* background-color: turquoise; */
     }
 
     #section1des2 {
@@ -116,6 +149,11 @@
         position: absolute;
         top: 200vh;
         left: 10vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: white;
+        font-size: 20px;
         background-color: forestgreen;
     }
 
@@ -125,7 +163,28 @@
         position: absolute;
         top: 220vh;
         left: 70vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: space-between;
         background-color: forestgreen;
+    }
+
+    #des2menu1 {
+        width: 100%;
+        height: 25%;
+        font-size: 20px;
+        font-weight: 900;
+    }
+
+    .des2menu {
+        width: 100%;
+        height: 20%;
+        border-top: gray 0.5px solid;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        /* background-color: turquoise; */
     }
 
     #section1des3 {
@@ -134,6 +193,11 @@
         position: absolute;
         top: 300vh;
         left: 10vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: white;
+        font-size: 20px;
         background-color: slateblue;
     }
 
@@ -143,31 +207,171 @@
         position: absolute;
         top: 320vh;
         left: 70vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: space-between;
         background-color: slateblue;
     }
 
-    #section1des4 {
-        width: 25vw;
-        height: 50vh;
-        position: absolute;
-        top: 400vh;
-        left: 10vw;
-        background-color: slateblue;
+    #des3menu1 {
+        width: 100%;
+        height: 25%;
+        font-size: 20px;
+        font-weight: 900;
     }
 
-    #section1des4_1 {
-        width: 20vw;
-        height: 25vh;
-        position: absolute;
-        top: 420vh;
-        left: 70vw;
-        background-color: slateblue;
+    .des3menu {
+        width: 100%;
+        height: 20%;
+        border-top: gray 0.5px solid;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        /* background-color: turquoise; */
     }
 
     #section2 {
         width: 100%;
         height: 100vh;
+        position: relative;
+        z-index: 0;
+        font-family: 'Arita-dotum-Medium';
         background-color: pink;
+    }
+    
+    #menubar {
+        width: 75%;
+        height: 10%;
+        position: absolute;
+        top: 20%;
+        left: 12.5%;
+        display: flex;
+        flex-wrap: wrap;
+        background-color: red;
+    }
+
+    .menutitle {
+        width: 33.333%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 40px;
+        background-color: honeydew;
+    }
+
+    .menutitle1 {
+        border-right: 0.5px solid gray;
+    }
+
+    .menutitle2 {
+        border-right: 0.5px solid gray;
+    }
+
+    #menu {
+        width: 75%;
+        height: 50%;
+        position: absolute;
+        top: 35%;
+        left: 12.5%;
+        background-color: blue;
+    }
+
+    #menu1 {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        background-color: aqua
+    }
+
+    #menu1 #menu1Case {
+        width: 25%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 37.5%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+    }
+
+    #menu1 #menu1Case img {
+        width: 60%;
+        height: 90%;
+    }
+
+    #menu1 #menu1OptionList {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        overflow: hidden;
+        /* background-color: yellow; */
+    }
+
+    #menu1OptionList .menu1Option {
+        width: 25%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .menu1Option img {
+        width: 60%;
+        height: 70%;
+    }
+
+    .arrow {
+        width: 3%;
+        height: 10%;
+        position: absolute;
+        top: 45%;
+        background-color: black;
+    }
+
+    #arrow_right {
+        left: 97%;
+    }
+
+    #arrow_left {
+        left: 0;
+    }
+
+    #menu2 {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: 0;
+        left: 0;
+        background-color:blueviolet;
+    }
+
+    #menu3 {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: 0;
+        left: 0;
+        background-color:chocolate;
+    }
+
+
+    #event {
+        width: 100%;
+        height: 8%;
+        position: absolute;
+        top: 92%;
+        left: 0;
+        background-color: greenyellow;
     }
 
     footer {
