--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -16,7 +16,7 @@
     #wrap {
         width: 100vw;
         /* height: 300vh; */
-        /* display: none; */
+        display: none;
         /* position: absolute;
         top: 0;
         left: 0; */
@@ -33,7 +33,6 @@
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 2;
         font-family: 'Arita-dotum-Medium';
     }
 
@@ -44,6 +43,7 @@
         justify-content: flex-end;
         align-items: center;
         font-size: 50px;
+        /* z-index: 2; */
         /* background-color: red; */
     }
 
@@ -54,6 +54,7 @@
         justify-content: flex-end;
         align-items: center;
         font-size: 50px;
+        /* z-index: 2; */
         background-color: red;
     }
 
@@ -64,6 +65,7 @@
         justify-content: flex-start;
         align-items: center;
         font-size: 20px;
+        /* z-index: 2; */
         /* background-color: red; */
     }
 
@@ -237,19 +239,19 @@
         position: relative;
         z-index: 1;
         font-family: 'Arita-dotum-Medium';
-        background-color: white;
+        background-color: #fcf9f3;
     }
     
     #menubar {
         width: 900px;
-        height: 10%;
+        height: 5%;
         position: absolute;
         top: 10%;
         left: 50%;
         transform: translate(-50%);
         display: flex;
         flex-wrap: wrap;
-        background-color: red;
+        background-color: #f3eeea;
     }
 
     .menutitle {
@@ -258,17 +260,31 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 30px;
-        background-color: honeydew;
+        font-size: 20px;
+        color: #928a84;
+        /* background-color: honeydew; */
     }
 
     .menutitle:hover {
         cursor: pointer;
+        /* background-color: #928a84; */
+        color: black;
+    }
+
+    /* .menutitle1:hover {
         color: #74a767;
     }
 
+    .menutitle2:hover {
+        color: #74a767;
+    }
+
+    .menutitle3:hover {
+        color: #74a767;
+    } */
+
     .menutitle1 {
-        border-right: 0.5px solid gray;
+        border-right: 0.1px solid gray;
     }
 
     .menutitle2 {
@@ -293,6 +309,7 @@
         left: 50%;
         transform: translate(-50%);
         overflow: hidden;
+        /* display: none; */
         /* background-color: aqua */
     }
 
@@ -305,7 +322,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white;
+        background-color: #fcf9f3;
     }
 
     #menu1 #menu1Case img {
@@ -383,21 +400,121 @@
     }
 
     #menu2 {
-        width: 100%;
+        width: 600px;
         height: 100%;
         position: relative;
         top: 0;
+        left: 450px;
+        border-radius: 5%;
+        background-image: url('../../image/sub/menu2Option1.png');
+        background-position:top;
+        background-size: 100% 50%;
+        background-repeat: no-repeat;
+        display: none;
+        background-color:#f3eeea;
+    }
+
+    /* #menu2img {
+        width: 100%;
+        height: 50%;
+        background-image: url('../../image/sub/menu2Option1.png');
+        background-position: center;
+        background-size: 100% 100%;
+        border-top-left-radius: 5%;
+        border-top-right-radius: 5%;
+        background-color: pink;
+    } */
+
+    #menu2title {
+        width: 100%;
+        height: 20%;
+        position: absolute;
+        top: 50%;
         left: 0;
-        background-color:blueviolet;
+        display: flex;
+        align-items: center;
+        /* background-color: aqua; */
+    }
+
+    #menu2title p {
+        width: 60%;
+        height: 60%;
+        margin-left: 20px;
+        font-family: 'Arita-dotum-Medium';
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        font-weight: 600;
+        /* background-color: pink; */
+    }
+
+    #menu2des {
+        width: 100%;
+        height: 20%;
+        position: absolute;
+        top: 70%;
+        left: 0;
+        display: flex;
+        align-items: flex-start;
+        /* background-color: brown; */
+    }
+
+    #menu2des p {
+        width: 60%;
+        height: 60%;
+        margin-left: 20px;
+        font-family: 'Arita-dotum-Medium';
+        display: flex;
+        align-items: flex-start;
+        /* background-color: pink; */
+    }
+
+    #menu2btncover {
+        width: 100%;
+        height: 10%;
+        position: absolute;
+        top: 90%;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* background-color: black; */
+    }
+
+    #menucover {
+        width: 11%;
+        height: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        /* background-color: coral; */
+    }
+
+    .menu2btn {
+        width: 15px;
+        height: 15px;
+        border-radius: 50% 50%;
+        border: 0.5px solid black;
+        background-color: white;
+    }
+
+    .menu2btn1 {
+        background-color: black;
+    }
+
+    .menu2btn:hover {
+        cursor: pointer;
+        background-color: black;
     }
 
     #menu3 {
-        width: 100%;
+        width: 600px;
         height: 100%;
-        position: relative;
+        position: absolute;
         top: 0;
-        left: 0;
-        background-color:chocolate;
+        left: 450px;
+        display: none;
+        background-color:black;
     }
 
 
