--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -16,7 +16,7 @@
     #wrap {
         width: 100vw;
         /* height: 300vh; */
-        display: none;
+        /* display: none; */
         /* position: absolute;
         top: 0;
         left: 0; */
@@ -29,7 +29,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        /* background-color: gray; */
+        background-color: gray;
         position: fixed;
         top: 0;
         left: 0;
@@ -75,7 +75,7 @@
         position: relative;
         z-index: -1;
         font-family: 'Arita-dotum-Medium';
-        background-color: blue;
+        background-color: #CACBCD;
     }
 
     #sectionimg {
@@ -84,7 +84,22 @@
         position: fixed;
         top: 20vh;
         left: 30vw;
-        background-color: red;
+        /* opacity: 0.5; */
+        background-image:url('../../image/sub/bg0.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        /* background-color: red; */
+    }
+
+    #sectionimg div {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        background-color: rgba(0,0,0,0.3);
     }
 
     #section1title {
@@ -92,7 +107,7 @@
         height: 20vh;
         position: absolute;
         top: 40vh;
-        left: 10vw;
+        left: 15vw;
         display: flex;
         justify-content: flex-start;
         align-items: center;
@@ -106,13 +121,13 @@
         height: 50vh;
         position: absolute;
         top: 100vh;
-        left: 10vw;
+        left: 15vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
         color: white;
         font-size: 20px;
-        background-color: crimson;
+        /* background-color: crimson; */
     }
 
     #section1des1_1 {
@@ -125,6 +140,7 @@
         flex-wrap: wrap;
         justify-content: center;
         align-content: space-between;
+        color: white;
         /* background-color: crimson; */
     }
 
@@ -138,7 +154,7 @@
     .des1menu {
         width: 100%;
         height: 20%;
-        border-top: gray 0.5px solid;
+        border-top: white 0.5px solid;
         display: flex;
         justify-content: flex-start;
         align-items: center;
@@ -150,13 +166,13 @@
         height: 50vh;
         position: absolute;
         top: 200vh;
-        left: 10vw;
+        left: 15vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
         color: white;
         font-size: 20px;
-        background-color: forestgreen;
+        /* background-color: forestgreen; */
     }
 
     #section1des2_1 {
@@ -169,20 +185,21 @@
         flex-wrap: wrap;
         justify-content: center;
         align-content: space-between;
-        background-color: forestgreen;
+        color: white;
+        /* background-color: forestgreen; */
     }
 
     #des2menu1 {
-        width: 100%;
+        width: 60%;
         height: 25%;
         font-size: 20px;
         font-weight: 900;
     }
 
     .des2menu {
-        width: 100%;
+        width: 60%;
         height: 20%;
-        border-top: gray 0.5px solid;
+        border-top: white 0.5px solid;
         display: flex;
         justify-content: flex-start;
         align-items: center;
@@ -194,13 +211,13 @@
         height: 50vh;
         position: absolute;
         top: 300vh;
-        left: 10vw;
+        left: 15vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
         color: white;
         font-size: 20px;
-        background-color: slateblue;
+        /* background-color: slateblue; */
     }
 
     #section1des3_1 {
@@ -213,20 +230,21 @@
         flex-wrap: wrap;
         justify-content: center;
         align-content: space-between;
-        background-color: slateblue;
+        color: white;
+        /* background-color: slateblue; */
     }
 
     #des3menu1 {
-        width: 100%;
+        width: 60%;
         height: 25%;
         font-size: 20px;
         font-weight: 900;
     }
 
     .des3menu {
-        width: 100%;
+        width: 60%;
         height: 20%;
-        border-top: gray 0.5px solid;
+        border-top: white 0.5px solid;
         display: flex;
         justify-content: flex-start;
         align-items: center;
