--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -16,7 +16,7 @@
     #wrap {
         width: 100vw;
         /* height: 300vh; */
-        /* display: none; */
+        display: none;
         /* position: absolute;
         top: 0;
         left: 0; */
