--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -17,6 +17,7 @@
         width: 100vw;
         /* height: 300vh; */
         display: none;
+        font-family: 'Arita-dotum-Medium';
         /* position: absolute;
         top: 0;
         left: 0; */
@@ -29,7 +30,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: gray;
+        background-color: #fcf9f3;
         position: fixed;
         top: 0;
         left: 0;
@@ -43,8 +44,11 @@
         justify-content: flex-end;
         align-items: center;
         font-size: 50px;
-        /* z-index: 2; */
-        /* background-color: red; */
+        background-image: url('../../image/sub/logo.png');
+        background-position: center;
+        background-size: 50% 50%;
+        background-repeat: no-repeat;
+        /* background-color: pink; */
     }
 
     header #logoimg {
@@ -76,6 +80,8 @@
         z-index: -1;
         font-family: 'Arita-dotum-Medium';
         background-color: #CACBCD;
+        background-image: url("https://www.transparenttextures.com/patterns/dark-wood.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
     }
 
     #sectionimg {
@@ -89,6 +95,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: 100% 100%;
+        box-shadow: 0px 0px 50px 10px #000000;
         /* background-color: red; */
     }
 
@@ -99,7 +106,7 @@
         top: 0;
         left: 0;
         z-index: -1;
-        background-color: rgba(0,0,0,0.3);
+        background-color: rgba(0,0,0,0.4);
     }
 
     #section1title {
@@ -430,6 +437,7 @@
         background-repeat: no-repeat;
         display: none;
         background-color:#f3eeea;
+        box-shadow: -15px 15px 30px -10px #000000;
     }
 
     /* #menu2img {
@@ -526,15 +534,81 @@
     }
 
     #menu3 {
-        width: 600px;
-        height: 100%;
-        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
         top: 0;
-        left: 450px;
+        left: 0;
         display: none;
-        background-color:black;
+        background-color:rgba(0,0,0,0.4);
     }
 
+    #menu3box {
+        width: 20%;
+        height: 70%;
+        position: relative;
+        left: 40%;
+        top: 15%;
+        display: flex;
+        flex-wrap: wrap;
+        background-color: white;
+    }
+
+    #menu3exit {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        /* background-color: pink; */
+    }
+
+    #menu3videobox {
+        width: 100%;
+        height: 90%;
+        position: relative;
+        background-color: #74a767;
+    }
+
+    #menu3videobox video {
+        width: 80%;
+        height: 100;
+        position: absolute;
+        top: 0;
+        left: 10%;
+        object-fit: contain;
+    }
+
+    .menu3arrow {
+        width: 10%;
+        height: 10%;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        /* background-color: red; */
+    }
+
+    .menu3arrow_left {
+        left: 0;
+        top: 45%;
+    }
+
+    .menu3arrow_right {
+        left: 90%;
+        top: 45%;
+    }
+
+    #menu3exit i {
+        font-size: 25px;
+        margin-right: 20px;
+    }
+
+    #menu3exit i:hover {
+        cursor: pointer;
+        color: #74a767;
+    }
 
     #event {
         width: 100%;
