--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -1,4 +1,4 @@
-@media (min-width:1024px){
+
     #intro {
         width: 100vw;
         height: 100vh;
@@ -264,7 +264,8 @@
         position: relative;
         z-index: 1;
         font-family: 'Arita-dotum-Medium';
-        background-color: #fcf9f3;
+        background-color: #875432;
+background-image: url("https://www.transparenttextures.com/patterns/tileable-wood-colored.png");
     }
     
     #menubar {
@@ -277,6 +278,7 @@
         display: flex;
         flex-wrap: wrap;
         background-color: #f3eeea;
+        box-shadow: -20px 20px 38px 0px #000000;
     }
 
     .menutitle {
@@ -323,7 +325,11 @@
         top: 25%;
         left: 50%;
         transform: translate(-50%);
-        /* background-color: blue; */
+    }
+
+    .menubg {
+        box-shadow: -20px 20px 38px 0px #000000;
+        background-color: #f3eeea;
     }
 
     #menu1 {
@@ -347,7 +353,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #fcf9f3;
+        /* box-shadow: 0px 0px 200px 0px #000000; */
+        /* background-color: #fcf9f3; */
     }
 
     #menu1 #menu1Case img {
@@ -545,21 +552,22 @@
 
     #menu3box {
         width: 20%;
-        height: 70%;
+        height: 80%;
         position: relative;
         left: 40%;
         top: 15%;
         display: flex;
         flex-wrap: wrap;
+        align-items: flex-start;
         background-color: white;
     }
 
     #menu3exit {
         width: 100%;
-        height: 10%;
+        height: 5%;
         display: flex;
         justify-content: flex-end;
-        align-items: center;
+        align-items: flex-end;
         /* background-color: pink; */
     }
 
@@ -567,16 +575,23 @@
         width: 100%;
         height: 90%;
         position: relative;
-        background-color: #74a767;
+        top: 0;
+        /* background-color: #74a767; */
     }
 
-    #menu3videobox video {
+    #menu3video {
         width: 80%;
-        height: 100;
+        height: 100%;
         position: absolute;
         top: 0;
         left: 10%;
-        object-fit: contain;
+        /* background-color: pink; */
+    }
+
+    #menu3video video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .menu3arrow {
@@ -586,8 +601,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 20px;
+        font-size: 30px;
         /* background-color: red; */
+    }
+
+    .menu3arrow:hover {
+        cursor: pointer;
+        color: #74a767;
     }
 
     .menu3arrow_left {
@@ -616,13 +636,59 @@
         position: absolute;
         top: 92%;
         left: 0;
-        background-color: greenyellow;
+        /* background-color: greenyellow; */
     }
 
     footer {
         width: 100%;
-        height: 40vh;
-        background-color: brown;
+        height: 25vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #f3eeea;
+        font-family: 'Arita-dotum-Medium';
     }
 
-}
+    #footercover {
+        width: 70%;
+        height: 70%;
+        display: flex;
+        flex-wrap: wrap;
+        /* background-color: pink; */
+    }
+
+    .footerOption1, .footerOption2{
+        width: 25%;
+        height: 100%;
+        font-size: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: #747474;
+        /* background-color: red; */
+    }
+    .footerOption3 {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* background-color: blue; */
+    }
+
+    .footerOption3 div {
+        width: 20%;
+        height: 50%;
+        font-size: 25px;
+        color: #747474;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        /* background-color: pink; */
+    }
+
+    .footerOption3 div:hover {
+        cursor: pointer;
+        color: #74a767;
+    }
